<?xml version="1.0"?>
<package>
  <name>robotx_tools</name>
  <version>0.0.0</version>
  <description>The robotx_tools package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>
  <author>masaya</author>
  <author>RyodoTanaka</author>

  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotx_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>robotx_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>rqt_bag</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>
  <run_depend>rosbag</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
