<?xml version="1.0"?>
<package format="2">
  <name>wamv_gazebo</name>
  <version>0.1.0</version>
  <description>
    Provides templates and examples for integrating the WAM-V model into gazebo with dynamics, sensors, etc.
  </description>

  <!-- Following maintainers are the original maintainer & author of wamv_gazebo -->
  <maintainer email="caguero@osrfoundation.org">Carlos Aguero</maintainer>
  <maintainer email="briansbngham@gmail.com">bsb</maintainer>
  <author>Carlos Auero</author>
  <author>bsb</author>
  
  <!-- Following maintainer is modified version wamv_gazebo's maintainer & author -->
  <maintainer email="groadpg@gmail.com">Ryodo Tanaka</maintainer>
  <author>Ryodo Tanaka</author>

  <!-- The original License was Apache 2.0 -->
  <!-- We modified that into GPL License -->
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-bloom</build_depend>
  <build_depend>fakeroot</build_depend>

  <depend>roslaunch</depend>
  <depend>xacro</depend>
  <depend>wamv_description</depend>
  <depend>usv_gazebo_plugins</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <depend>hector_gazebo_plugins</depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  
</package>
