<?xml version="1.0"?>
<package>
  <name>robotx_navigation</name>
  <version>0.0.0</version>
  <description>The robotx_navigation package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>
  <author>masaya</author>
  <author>RyodoTanaka</author>

  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robotx_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>yaml_cpp_0_3</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>python-bloom</build_depend>
  <build_depend>fakeroot</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robotx_msgs</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>yocs_safety_controller</run_depend>
  <run_depend>yocs_waypoints_navi</run_depend>
  <run_depend>yocs_waypoint_provider</run_depend>
  <run_depend>yaml_cpp_0_3</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cog_publisher</run_depend>
</package>
